layout bug fixed

--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ html,body {
   height: 100%;
 }
 
+.layout{
+  display:flex;
+  flex-direction:column;
+}
+
 .preload * {
   -webkit-transition: none !important;
   -moz-transition: none !important;
@@ -66,6 +71,10 @@ header {
   top: 0;
   z-index: 1;
   width:100%;
+}
+
+main{
+  flex:1;
 }
 
 .header--container {
